--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,9 @@
-echo "Hello World"
+cat <<EOF
+
+    __  ______   _____    ____        __           _____      _
+   /  |/  /   | / ___/   / __ \____ _/ /_____ _   / ___/_____(_)__  ____  ________
+  / /|_/ / /| | \__ \   / / / / __ `/ __/ __ `/   \__ \/ ___/ / _ \/ __ \/ ___/ _ \
+ / /  / / ___ |___/ /  / /_/ / /_/ / /_/ /_/ /   ___/ / /__/ /  __/ / / / /__/  __/
+/_/  /_/_/  |_/____/  /_____/\__,_/\__/\__,_/   /____/\___/_/\___/_/ /_/\___/\___/
+
+EOF
