--- a/app/pgvectorscale-rag-solution/requirements.txt
+++ b/app/pgvectorscale-rag-solution/requirements.txt
@@ -1,9 +1,14 @@
+ruff
 pandas
 openai
 psycopg
 python-dotenv
-timescale-vector
 instructor
 anthropic
 langchain-community
 langchain-huggingface
+langchain-nomic
+nomic[local]
+pgvector
+psycopg2
+langchain_ollama
