docs: Updated documentation

--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,17 @@
 # psycopg3 for langchain
 # CONNECTION_STRING = "postgresql+psycopg2://postgres:password@localhost:5432"
 CONNECTION_STRING = "postgresql+psycopg://postgres:password@localhost:5432"
+
+OLLAMA_BASE_URL = "http://192.168.1.25:11434"
+
+LLM="llama3.2"  # 3B / num_ctx 131072
+#LLM="phi4"  # 15B / num_ctx 16384
+#LLM="deepseek-r1"  # 7B / num_ctx 131072
+#LLM="qwen2.5max_ctx"  # 7B / num_ctx 32768
+
+# LOGS = true  # Uncomment to enable logging
+
+LANGSMITH_TRACING = false
+LANGSMITH_ENDPOINT = "https://api.smith.langchain.com"
+LANGSMITH_API_KEY = "xxxx"
+LANGSMITH_PROJECT = "xxxx"
