docs: Updated README

--- a/requirements_noversions.txt
+++ b/requirements_noversions.txt
@@ -1,20 +1,24 @@
-ruff
-pandas
-openai
-psycopg
-python-dotenv
+beautifulsoup4
+flask-sqlalchemy
+geopy
+gradio
 instructor
-anthropic
+json
 langchain-community
 langchain-huggingface
 langchain-nomic
-nomic[local]
-pgvector
-psycopg2
-langchain_ollama
 langchain_experimental
-tqdm
+langchain_ollama
 matplotlib
-flask-sqlalchemy
+nomic[local]
+numpy
+openai
+pandas
+pgvector
+psycopg
+psycopg2
+python-dotenv
 rank_bm25
-beautifulsoup4
+ruff
+spacy
+tqdm
